[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Dialogo/DialogueBox.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Outros/Conteudo/Conteudo.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fontes/ConnectionII.otf"

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Balao" type="Control" parent="."]
visible = false
margin_right = 1023.0
margin_bottom = 592.0

[node name="TextureBalao" type="TextureRect" parent="Balao"]
margin_left = 182.0
margin_top = 103.0
margin_right = 879.0
margin_bottom = 492.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRectBalao" type="ColorRect" parent="Balao/TextureBalao"]
margin_left = 34.0
margin_top = 61.0
margin_right = 665.0
margin_bottom = 332.0
color = Color( 0.145098, 0.152941, 0.192157, 0.85098 )

[node name="RichTextLabelBalao" type="RichTextLabel" parent="Balao"]
margin_left = 226.0
margin_top = 176.0
margin_right = 839.0
margin_bottom = 434.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.964706, 0.945098, 0.945098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="TweenBalao" type="Tween" parent="Balao"]

[node name="LabelBalao" type="Label" parent="Balao"]
margin_left = 257.0
margin_top = 181.0
margin_right = 797.0
margin_bottom = 399.0

[node name="Dialogo" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 602.0

[node name="TextureDialogo" type="TextureRect" parent="Dialogo"]
margin_left = 185.0
margin_top = 422.0
margin_right = 858.0
margin_bottom = 574.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRectDialogo" type="ColorRect" parent="Dialogo/TextureDialogo"]
margin_left = 29.0
margin_top = 26.0
margin_right = 641.0
margin_bottom = 130.0
color = Color( 0.145098, 0.152941, 0.192157, 0.85098 )

[node name="RichTextLabelDialogo" type="RichTextLabel" parent="Dialogo"]
margin_left = 213.0
margin_top = 443.0
margin_right = 826.0
margin_bottom = 553.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.964706, 0.945098, 0.945098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="TweenDialogo" type="Tween" parent="Dialogo"]

[node name="LabelDialogo" type="Label" parent="Dialogo"]
margin_left = 218.0
margin_top = 447.0
margin_right = 823.0
margin_bottom = 551.0

[node name="Instru" type="Control" parent="."]
visible = false
margin_right = 1027.0
margin_bottom = 608.0

[node name="TextureInstru" type="TextureRect" parent="Instru"]
margin_left = -6.0
margin_top = -20.0
margin_right = 346.0
margin_bottom = 222.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRectInstru" type="ColorRect" parent="Instru/TextureInstru"]
margin_left = 15.0
margin_top = 35.0
margin_right = 336.0
margin_bottom = 206.0
color = Color( 0.145098, 0.152941, 0.192157, 0.85098 )

[node name="RichTextLabelInstru" type="RichTextLabel" parent="Instru"]
margin_left = 20.0
margin_top = 28.0
margin_right = 297.0
margin_bottom = 165.0

[node name="TweenInstru" type="Tween" parent="Instru"]

[node name="LabelInstru" type="Label" parent="Instru"]
margin_left = 14.0
margin_top = 17.0
margin_right = 326.0
margin_bottom = 185.0

[connection signal="tween_completed" from="Balao/TweenBalao" to="." method="_on_TweenBalao_tween_completed"]
[connection signal="tween_started" from="Balao/TweenBalao" to="." method="_on_TweenBalao_tween_started"]
